sandbox/output
Hiker.java:8: error: cannot find symbol
            return Integer.valueof(str);
                          ^
  symbol:   method valueof(String)
  location: class Integer
1 error
